# RustFrame

./: .editorconfig  .gitignore  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  QUICK_START.md  README.md  RustFrame.exe.manifest  RustFrame.exe.rc  SECURITY.md  build.rs  run_dx12.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
docs/changelog/: README.md  v0.2.0.md  v1.1.0-rc.1.md  v1.1.0.md
examples/: egui_test.rs
src/: bitmap_font.rs  capture.rs  capture_old.rs  constants.rs  destination_window.rs  hollow_border.rs  lib.rs  main.rs  main_iced.rs  main_new.rs  mouse_hook.rs  renderer.rs  renderer_old.rs  settings_dialog.rs  shader.wgsl  utils.rs  window_manager.rs
src/app/: mod.rs  state.rs
src/capture/: linux.rs  macos.rs  mod.rs  windows.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/renderer/: egui_renderer.rs  mod.rs
src/ui/: border_frame.rs  destination.rs  mod.rs  overlay.rs  settings.rs  theme.rs  tray.rs  tray_simple.rs
src/ui/capture_border/: linux.rs  macos.rs  mod.rs  windows.rs
